plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.fitness'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	repositories {
		mavenCentral()
	}

	dependencies {
		// Spring web
		implementation 'org.springframework.boot:spring-boot-starter-web'

		// Validation
		implementation 'org.springframework.boot:spring-boot-starter-validation'

		// Spring data JPA
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

		// Security
		implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
		testImplementation 'org.springframework.security:spring-security-test'

		// Swagger
		implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // Database
		runtimeOnly 'org.postgresql:postgresql'

		// Testing
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'org.testcontainers:junit-jupiter'
		testImplementation 'org.testcontainers:postgresql'

		// Lombok
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

		// QueryDSL
		implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
		annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
		annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

		// Mapstruct
		implementation "org.mapstruct:mapstruct:1.5.5.Final"
		annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
	}

	tasks.named('test') {
		useJUnitPlatform()
	}
